--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 Складається з 47 адміністративних одиниць — префектур.<br/> 
 Столиця — Токіо.Одна з найбільш технологічно розвинутих країн світу.<br/><h3>
 <img src="japan1.jpg"width="400"/><br/>
+	<a href="japanA.html">Стройка</a>
 </body>
 <html>
